--- a/my-msa-app/src/App.css
+++ b/my-msa-app/src/App.css
@@ -30,3 +30,13 @@
 .textfield {
   margin-right: 20px;
 }
+
+h1{
+  text-align: center;
+  font-size: 20px;
+}
+
+h2{
+  text-align: center;
+  font-size: 10px;
+}
